.archive/nx-kubeflow-deployment/kubeflow/gateway/kubeflow.gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: kubeflow-gateway
  namespace: kubeflow
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
    # Upgrade HTTP to HTTPS
    tls:
      httpsRedirect: false
#  - hosts:
#    #- 'kubeflow-kcd.demo.kubermatic.io'
#      - '*'
#    port:
#      name: https
#      number: 443
#      protocol: HTTPS
#    tls:
#      mode: SIMPLE
#      credentialName: kubeflow-demo-ingress-cert-pn9nb
